The version that was presented to the MD

--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
 		<meta name = "author" content = "Omogbare Louis Ekpenga"/>
 		<meta name = "description" content = "We are a non-profit organisation with a mission to ensure that every african child has access to quality education."/>
 		<meta name = "keywords" content = "non-profit, non-profit organisation, NGO, free education, children education"/>
-		<title>Our Projects - Precious Gems Foundation</title>
+		<title>Our Projects - Precious Gems Foundation programmes</title>
 	</head>
 	<body>
 			<!--Container Div -->
